@@ -916,6 +916,10 @@ MANACOMPOUND=
 # The default is -1, 10.
 MANAMINCOST=-1, 10
 
+# The PRACMAXPCT is the maximum percentage of skill proficiency that
+# can be practiced using practice points.  Default is 75.
+PRACMAXPCT=75
+
 # ABILITY COSTS are three fields which define the number of 
 # trains, xp, money, and/or practices required to gain an ability by 
 # default.  Common skills and Languages are considered different 
