@@ -898,6 +898,12 @@
 			</TD><TD WIDTH=45% VALIGN=TOP>
 				<FONT COLOR=WHITE>@INIValue?MASK=NEWACODES&INIHELP@</FONT>
 		</TD></TR>
+		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>PRACMAXPCT</FONT>
+			</TD><TD WIDTH=35% VALIGN=TOP>
+			<INPUT TYPE=TEXT NAME=PRACMAXPCT SIZE=10 VALUE="@INIValue?MASK=PRACMAXPCT&VALUE@">
+			</TD><TD WIDTH=45% VALIGN=TOP>
+			<FONT COLOR=WHITE>@INIValue?MASK=PRACMAXPCT&INIHELP@</FONT>
+		</TD></TR>
         <TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>PROF FORMULA</FONT></TD>
         <TD WIDTH=80% COLSPAN=2 VALIGN=TOP>
         <TEXTAREA NAME=FORMULA_MAXCARRY COLS=60 ROWS=2>@INIValue?MASK=FORMULA_PROFGAIN&VALUE@</TEXTAREA>
